Sidenav document overlay no longer appears behind the sidenav itself

--- a/assets/css/sidenav.css
+++ b/assets/css/sidenav.css
@@ -11,7 +11,7 @@
   z-index: 1000; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color: rgba(25,25,26,.95); /* Black*/
+  background-color: rgba(25,25,26,.90); /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -19,7 +19,7 @@
 
 .sidenav-disabledoc {
     height: 100%;
-    width: 100%;
+    width: 100%;    
     z-index: -1000;
     background-color: rgba(0,0,0,0.0);
     transition: 0.5s;
@@ -30,7 +30,7 @@
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #fafafa;
   display: block;
   transition: 0.3s;
 }
